--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1634,10 +1634,11 @@ height 50px
 }
 .page-about-shop .shop-about {
   display: block;
+  padding-bottom: 50px;
 }
 .page-about-shop .shop-about img {
   display: block;
-  margin: 0 auto;
+  margin: 30px auto 0;
 }
 /* error */
 .modal-error {
