--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1361,9 +1361,10 @@ height 50px
     display none
   .shop-about
     display block
+    padding-bottom 50px
     img
       display block
-      margin 0 auto
+      margin 30px auto 0
 
 /* error */
 .modal-error
