--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1361,6 +1361,7 @@ height 50px
     display none
   .shop-about
     display block
+    padding 5px 20px
     padding-bottom 50px
     img
       display block
