--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1361,11 +1361,15 @@ height 50px
     display none
   .shop-about
     display block
-    padding 5px 20px
+    padding-top 5px
     padding-bottom 50px
+    max-width 1200px
+    margin 0 auto
     img
       display block
       margin 30px auto 0
+    p
+      font-size 14px
 
 /* error */
 .modal-error
