--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -66,6 +66,10 @@ h1 {
   padding: 0 8px;
   font-size: 16px;
 }
+.ace-nav .nav-user-photo {
+  border: 0;
+  max-width: 35px;
+}
 .nav-list > li > a {
   padding: 8px 10px 10px 16px;
   height: auto;
@@ -497,7 +501,6 @@ h1 {
 .create-topic .topic-body textarea {
   width: 100%;
   height: 90px;
-  margin-bottom: 10px;
   overflow: hidden;
 }
 .create-topic >.btn-group {
@@ -512,6 +515,9 @@ h1 {
 }
 .create-topic .wysiwyg-editor {
   border-left: 1px solid #ccc;
+}
+.create-topic .message-input-bottom {
+  margin-top: 10px;
 }
 /* новые стили после редизайна 11.06.14 */
 .itemdiv > .user > img {
@@ -569,6 +575,10 @@ h1 {
 .attach-area .remove-attach-img:hover {
   text-decoration: none;
 }
+.attach-dropdown li a:hover {
+  background: #4f99c6;
+  color: #fff;
+}
 .attach-dropdown .ace-file-input {
   margin-bottom: 0;
   line-height: 1.5;
@@ -597,6 +607,16 @@ h1 {
 }
 .attach-dropdown .ace-file-input:hover .file-label:before {
   color: #fff;
+}
+.attached {
+  padding-bottom: 20px;
+}
+.attached a {
+  display: inline-block;
+  vertical-align: top;
+}
+.attached a img {
+  max-width: 300px;
 }
 .create-poll {
   margin-bottom: 10px;
@@ -710,16 +730,6 @@ h1 {
 .lenta-item .lenta-item-hashtag {
   float: right;
 }
-.lenta-item .attached {
-  padding-bottom: 20px;
-}
-.lenta-item .attached a {
-  display: inline-block;
-  vertical-align: top;
-}
-.lenta-item .attached a img {
-  max-width: 300px;
-}
 .create-topic-btn {
   overflow: auto;
 }
@@ -759,9 +769,12 @@ h1 {
   margin-top: 0;
 }
 .talks-block .answer-input textarea {
-  width: 88%;
-  margin-bottom: 10px;
+  width: 100%;
   overflow: hidden;
+}
+.talks-block .answer-input .answer-input-bottom {
+  margin-top: 10px;
+  padding-bottom: 10px;
 }
 .talks-block .widget-main {
   position: relative;
