--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -78,6 +78,10 @@ transform()
   line-height inherit
   padding 0 8px
   font-size 16px
+  
+.ace-nav .nav-user-photo
+  border 0
+  max-width 35px
 
 .nav-list > li > a
   padding 8px 10px 10px 16px
@@ -444,7 +448,6 @@ transform()
     textarea
       width 100%
       height 90px
-      margin-bottom 10px
       overflow hidden
   >.btn-group
     float right
@@ -455,6 +458,8 @@ transform()
       margin-right 5px
   .wysiwyg-editor
     border-left 1px solid #ccc
+  .message-input-bottom
+    margin-top 10px
 
 /* новые стили после редизайна 11.06.14 */
 .itemdiv > .user > img
@@ -482,7 +487,6 @@ transform()
   .message-input-bottom
     margin-top 15px
 
-
 .attach-area
   .attach-item
     display inline-block
@@ -505,6 +509,9 @@ transform()
       text-decoration none
 
 .attach-dropdown
+  li a:hover
+    background #4f99c6
+    color #fff
   .ace-file-input
     margin-bottom 0
     line-height 1.5
@@ -529,6 +536,14 @@ transform()
       background #4f99c6
       .file-label:before
         color #fff
+
+.attached
+  padding-bottom 20px
+  a
+    display inline-block
+    vertical-align top
+    img
+      max-width 300px
 
 .create-poll
   margin-bottom 10px
@@ -616,13 +631,6 @@ transform()
     bottom 3px
   .lenta-item-hashtag
     float right
-  .attached
-    padding-bottom 20px
-    a
-      display inline-block
-      vertical-align top
-      img
-        max-width 300px
 
 .create-topic-btn
   overflow auto
@@ -655,9 +663,11 @@ transform()
         margin-top 0
   .answer-input
     textarea
-      width 88%
-      margin-bottom 10px
+      width 100%
       overflow hidden
+    .answer-input-bottom
+      margin-top 10px
+      padding-bottom 10px
   .widget-main
     position relative
   .message-bottom
