--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -792,33 +792,54 @@ h1 {
 .talks-block .poll h5 {
   font-family: tahoma, arial;
 }
+.dialog-send {
+  padding-top: 15px;
+}
+.dialog-send .dialog-send-center {
+  margin: 0 60px;
+}
+.dialog-send .dialog-send-center textarea {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.dialog,
 .private-messages {
   padding: 10px;
 }
+.dialog h2,
 .private-messages h2 {
   margin-top: 0;
 }
+.dialog .private-message-single,
 .private-messages .private-message-single {
+  cursor: pointer;
   padding: 10px;
   overflow: auto;
   border-bottom: 1px solid #ccc;
 /* nextdoors */
 }
+.dialog .private-message-single:first-child,
 .private-messages .private-message-single:first-child {
   border-top: 1px solid #ccc;
 }
+.dialog .private-message-single .private-message-left,
 .private-messages .private-message-single .private-message-left {
   width: 300px;
 }
+.dialog .private-message-single .private-message-left .private-message-ava img,
 .private-messages .private-message-single .private-message-left .private-message-ava img {
   width: 70px;
 }
+.dialog .private-message-single .private-message-left .private-message-author,
 .private-messages .private-message-single .private-message-left .private-message-author {
   margin-left: 90px;
 }
+.dialog .private-message-single .private-message-left .private-message-author a:hover,
 .private-messages .private-message-single .private-message-left .private-message-author a:hover {
   text-decoration: none;
 }
+.dialog .private-message-single .private-message-right,
 .private-messages .private-message-single .private-message-right {
   margin-left: 320px;
 }
