--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -681,11 +681,22 @@ transform()
       font-family tahoma, arial
 
   /* private-messages */
+.dialog-send
+  padding-top 15px
+  .dialog-send-center
+    margin 0 60px
+    textarea
+      display block
+      width 100%
+      margin-bottom 10px
+
+.dialog
 .private-messages
   padding 10px
   h2
     margin-top 0
   .private-message-single
+    cursor pointer
     padding 10px
     overflow auto
     border-bottom 1px solid #CCCCCC
