--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -188,7 +188,7 @@
                     <div class="wallitem-topic" ng-switch-when="1">
                         <div class="talks-title">
                             <div class="talks-title-left load-talk">
-                                <div><a ui-sref="talks.talks-single({ talkId : {{wallItem.topic.id}} })">{{wallItem.topic.subject}}</a></div> <!-- ng-click="showFullTalk($event,wallItem.topic.id)" -->
+                                <div><a ui-sref="talks-single({ talkId : {{wallItem.topic.id}} })">{{wallItem.topic.subject}}</a></div> <!-- ng-click="showFullTalk($event,wallItem.topic.id)" -->
                                 <div>{{wallItem.topic.messageNum}} сообщений</div>
                             </div>
                             <div class="talks-title-right">
