save settings for issue#33

--- a/vonline_be/war/css/settings.styl
+++ b/vonline_be/war/css/settings.styl
@@ -24,6 +24,7 @@
   input[type="text"]
   input[type="password"]
   input[type="email"]
+  input[type="tel"]
     margin-bottom 10px
     width 233px
   textarea
@@ -53,6 +54,12 @@
   width auto
   padding-right 10px
   vertical-align top
+
+.single-child
+.single-pet
+.settings-child-item
+.settings-pet-item
+  margin-left 160px
 
 
 
