--- a/vonline_be/war/css/settings.css
+++ b/vonline_be/war/css/settings.css
@@ -38,7 +38,9 @@
 .settings input[type="password"],
 .edit-personal input[type="password"],
 .settings input[type="email"],
-.edit-personal input[type="email"] {
+.edit-personal input[type="email"],
+.settings input[type="tel"],
+.edit-personal input[type="tel"] {
   margin-bottom: 10px;
   width: 233px;
 }
@@ -75,4 +77,10 @@
   width: auto;
   padding-right: 10px;
   vertical-align: top;
+}
+.single-child,
+.single-pet,
+.settings-child-item,
+.settings-pet-item {
+  margin-left: 160px;
 }
